# ReleastTool

./: .gitignore  main.py  pyproject.toml
src/: gh.py  release.py  utils.py
